------------------------------------------------------------------------------

Parking
-------
 * parkedmusicclass can now be set for non-default parking lots.

Asterisk Manager Interface
--------------------------
 * PeerStatus now includes Address and Port.
 * Added Hold events for when the remote party puts the call on and off hold
   for chan_dahdi ISDN channels.

Asterisk HTTP Server
--------------------------
 * The HTTP Server can bind to IPv6 addresses.

CLI Changes
--------------------------
 * New 'gtalk show settings' command showing the current settings loaded from
   gtalk.conf.
 * The 'logger reload' command now supports an optional argument, specifying an
   alternate configuration file to use.

CDR
--------------------------
 * The filter option in cdr_adaptive_odbc now supports negating the argument,
   thus allowing records which do NOT match the specified filter.

Dialplan Variables
------------------
 * Added ASTETCDIR, ASTMODDIR, ASTVARLIBDIR, ASTDBDIR, ASTKEYDIR, ASTDATADIR,
   ASTAGIDIR, ASTSPOOLDIR, ASTRUNDIR, ASTLOGDIR which hold the equivalent
   variables from asterisk.conf.

Dialplan Functions
------------------
 * Added DB_KEYS, which lists the next set of keys in the Asterisk database
   hierarchy.

libpri channel driver (chan_dahdi) DAHDI changes
--------------------------
 * Added moh_signaling option to specify what to do when the channel's bridged
   peer puts the ISDN channel on hold.
 * Added display_send and display_receive options to control how the display ie
   is handled.  To send display text from the dialplan use the SendText()
   application when the option is enabled.
 * Added mcid_send option to allow sending a MCID request on a span.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.2 to Asterisk 1.8 ----------------
------------------------------------------------------------------------------

SIP Changes
-----------